pacman: Only use multilib repository if 64-bit

--- a/files/pacman.conf
+++ b/files/pacman.conf
@@ -16,5 +16,7 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
+{% if long_bit %}
 [multilib]
 Include = /etc/pacman.d/mirrorlist
+{% endif %}
