Manually determine architecture of running machine using LONG_BIT

--- a/files/pacman.conf
+++ b/files/pacman.conf
@@ -15,8 +15,8 @@ Include = /etc/pacman.d/mirrorlist
 
 [community]
 Include = /etc/pacman.d/mirrorlist
+{% if long_bit.stdout == "64" %}
 
-{% if long_bit %}
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 {% endif %}
