--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -11,7 +11,7 @@
 - name: Install extra tools if using Chris profile
   pacman: name={{ item }} state=present
   with_items:
-    - android-tools
+    - android-tools-adb
     - unrar
     - atop
     - dnsutils
