--- a/tasks/xorg.yml
+++ b/tasks/xorg.yml
@@ -2,27 +2,25 @@
 - name: Install Xorg base
   pacman: name={{ item }} state=present
   with_items:
-    - xorg-server
-    - xorg-xrandr
-    - xorg-xinit
-    - xorg-xset
+    - xserver-xorg
+    - x11-xserver-utils
+    - xinit
 
 - name: Blacklist nouveau Xorg driver
   kernel_blacklist: name=nouveau state=present
-  when: model == "Vostro 3700" or model == "XPS 8500"
+  when: model == "Vostro 3700"
 
 - name: Set up Xorg for Vostro 3700
   pacman: name={{ item }} state=present
   with_items:
-    - xf86-video-intel
-    - xf86-input-synaptics
+    - xserver-xorg-video-intel
+    - xserver-xorg-input-synaptics
   when: model == "Vostro 3700"
 
 - name: Set up Xorg for XPS 8500
   pacman: name={{ item }} state=present
   with_items:
-    - nvidia
-    - nvidia-utils
+    - xserver-xorg-video-nouveau
   when: model == "XPS 8500"
 
 - name: Install VirtualBox guest utilities
