--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -9,7 +9,7 @@
   command: aur chromium-pepper-flash
 
 - name: Install desktop utilities
-  pacman: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
     - chromium
     - suckless-tools
@@ -17,9 +17,9 @@
     - rxvt-unicode
 
 - name: Set up terminal fonts (Chris)
-  pacman: name=terminus-font state=present
+  apt: name=terminus-font state=present
   when: user == "chris"
 
 - name: Set up terminal fonts (Lin)
-  pacman: name=ttf-inconsolata state=present
+  apt: name=ttf-inconsolata state=present
   when: user == "lin"
