--- a/tasks/chinese.yml
+++ b/tasks/chinese.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install tools for Pinyin entry
-  pacman: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
     - fcitx
     - fcitx-sunpinyin
