--- a/tasks/email.yml
+++ b/tasks/email.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install tools for e-mail
-  pacman: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
     - mutt
     - w3m
