--- a/tasks/network.yml
+++ b/tasks/network.yml
@@ -4,11 +4,11 @@
   when: not wifi
 
 - name: Install wireless tools
-  pacman: name=wpa_supplicant state=present
+  apt: name=wpa_supplicant state=present
   when: wifi
 
 - name: Install dnsmasq for DNS caching
-  pacman: name=dnsmasq state=present
+  apt: name=dnsmasq state=present
 
 - name: Set up DNS caching
   copy: src=files/network/dnsmasq.conf dest=/etc/dnsmasq.conf
