--- a/tasks/sudo.yml
+++ b/tasks/sudo.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install sudo
-  pacman: name=sudo state=present
+  apt: name=sudo state=present
 
 - name: Configure sudoers
   copy: src=files/sudoers dest=/etc/sudoers mode=0440
