--- a/tasks/xorg.yml
+++ b/tasks/xorg.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Xorg base
-  pacman: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
     - xserver-xorg
     - x11-xserver-utils
@@ -11,20 +11,20 @@
   when: model == "Vostro 3700"
 
 - name: Set up Xorg for Vostro 3700
-  pacman: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
     - xserver-xorg-video-intel
     - xserver-xorg-input-synaptics
   when: model == "Vostro 3700"
 
 - name: Set up Xorg for XPS 8500
-  pacman: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
     - xserver-xorg-video-nouveau
   when: model == "XPS 8500"
 
 - name: Install VirtualBox guest utilities
-  pacman: name=virtualbox-guest-utils state=present
+  apt: name=virtualbox-guest-utils state=present
   when: model == "VirtualBox"
 
 - name: Set up autoloading of VirtualBox modules
