--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -17,9 +17,9 @@
     - rxvt-unicode
 
 - name: Set up terminal fonts (Chris)
-  apt: name=terminus-font state=present
+  apt: name=xfonts-terminus state=present
   when: user == "chris"
 
 - name: Set up terminal fonts (Lin)
-  apt: name=ttf-inconsolata state=present
+  apt: name=fonts-inconsolata state=present
   when: user == "lin"
