Install Google Chrome

--- a/setup.yml
+++ b/setup.yml
@@ -15,6 +15,9 @@
   vars_files:
     - vars/{{ config_file }}.yml
 
+  vars:
+    - apt_file: /etc/apt/sources.list.d/google-chrome.list
+
   tasks:
     - include: tasks/network.yml
     - include: tasks/ssh.yml
