Set up dwm from Git

--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -7,6 +7,7 @@
     - rsync
     - tmux
     - gnome-icon-theme
+    - build-essential
 
 - name: Install extra tools if using Chris profile
   apt: name={{ item }} state=present
