xps 8500 xorg: Do not use with_items for single nouveau package

--- a/tasks/xorg.yml
+++ b/tasks/xorg.yml
@@ -18,9 +18,7 @@
   when: model == "Vostro 3700"
 
 - name: Set up Xorg for XPS 8500
-  apt: name={{ item }} state=present
-  with_items:
-    - xserver-xorg-video-nouveau
+  apt: name=xserver-xorg-video-nouveau state=present
   when: model == "XPS 8500"
 
 - name: Install VirtualBox guest utilities
