Fix service names for Ubuntu

--- a/tasks/ntp.yml
+++ b/tasks/ntp.yml
@@ -3,4 +3,4 @@
   apt: name=ntp state=present
 
 - name: Enable NTP daemon
-  service: name=ntpd state=started enabled=yes
+  service: name=ntp state=started enabled=yes
