--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -30,7 +30,7 @@
     - sharutils
 
 - name: Update dwm
-  git: repo=git://github.com/cdown/dotfiles.git dest=/usr/src/dwm-cdown update=yes
+  git: repo=git://github.com/cdown/dwm.git dest=/usr/src/dwm-cdown update=yes
 
 - name: Install dwm
   command: make clean install chdir=/usr/src/dwm-cdown
