media: Use mplayer2 instead of mpv
Right now mpv is not available in the repositories.

--- a/tasks/media.yml
+++ b/tasks/media.yml
@@ -2,7 +2,7 @@
 - name: Install media applications
   apt: name={{ item }} state=present
   with_items:
-    - mpv
+    - mplayer2
     - mpd
     - mpc
   when: user == "chris"
