basic tools: Install curl

--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -8,6 +8,7 @@
     - tmux
     - gnome-icon-theme
     - build-essential
+    - curl
 
 - name: Install extra tools if using Chris profile
   apt: name={{ item }} state=present
