media: Install zathura instead of mupdf
mupdf is missing some basic functionality in the version contained in
Wheezy.

--- a/tasks/media.yml
+++ b/tasks/media.yml
@@ -7,5 +7,5 @@
     - mpc
   when: user == "chris"
 
-- name: Install mupdf
-  apt: name=mupdf state=present
+- name: Install zathura
+  apt: name=zathura state=present
