--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -1,20 +1,15 @@
 ---
-- name: Check if Google apt file exists
-  command: test -f {{ apt_file }}
-  register: google_apt_exists
-  ignore_errors: True
-
 - name: Add Google Chrome key
   shell: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-  when: google_apt_exists.rc == 1
 
 - name: Add Google Chrome repo
-  copy: src=files/apt/google-chrome dest={{ apt_file }} owner=root group=root mode=644
-  when: google_apt_exists.rc == 1
+  copy: src=files/apt/google-chrome dest=/etc/apt/sources.list.d/google-chrome.list owner=root group=root mode=644
+
+- name: Add Google Hangouts repo
+  copy: src=files/apt/google-talkplugin dest=/etc/apt/sources.list.d/google-talkplugin.list owner=root group=root mode=644
 
 - name: Update apt cache
   apt: update_cache=yes
-  when: google_apt_exists.rc == 1
 
 - name: Work around XDG "no writable system icon directory found" bug
   file: path={{ item }} state=directory
