desktop: Install libgcrypt15 before google-chrome
It would be nice to automatically resolve the dependencies, but this
works for now.

--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -6,7 +6,10 @@
   command: aur google-talkplugin
 
 - name: Install Google Chrome
-  command: aur google-chrome
+  command: aur {{ item }}
+  with_items:
+    - libgcrypt15
+    - google-chrome
 
 - name: Install desktop utilities
   pacman: name={{ item }} state=present
