basic tools: Install pass/passmenu when using Chris profile

--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -20,6 +20,8 @@
     - git
     - lsof
     - xclip
+    - pass
+    - passmenu
   when: user == "chris"
 
 - name: Install extra tools if using Lin profile
