basic tools: Install yturl when using Chris profile

--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -25,6 +25,10 @@
     - sxiv
   when: user == "chris"
 
+- name: Install yturl if using Chris profile
+  command: aur yturl
+  when: user == "chris"
+
 - name: Install extra tools if using Lin profile
   pacman: name=libreoffice state=present
   when: user == "lin"
