desktop: Install alsa-utils

--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -18,6 +18,7 @@
     - imagemagick
     - rxvt-unicode
     - slock
+    - alsa-utils
 
 - name: Install urxvt Perl extensions
   command: aur urxvt-perls
