--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -20,6 +20,10 @@
     - slock
     - alsa-utils
 
+- name: Install qt4 for pinentry-qt4 if on Chris profile
+  pacman: name=qt4 state=present
+  when: user == "chris"
+
 - name: Install urxvt Perl extensions
   command: aur urxvt-perls
 
