--- a/setup.yml
+++ b/setup.yml
@@ -19,6 +19,7 @@
     - name: Get size of long to determine architecture
       command: getconf LONG_BIT
       register: long_bit
+
     - include: tasks/pacman.yml
     - include: tasks/network.yml
     - include: tasks/ssh.yml
@@ -38,3 +39,9 @@
     - include: tasks/chinese.yml
     - include: tasks/dotfiles.yml
     - include: tasks/rbenv.yml
+
+    - debug: msg={{ item }}
+      with_items:
+        - "Playbook complete. Remaining tasks:"
+        - "- Clone and set up private dotfiles"
+        - "- Import desired ssh keys to ~/.ssh/keys"
