rbenv: Quote {{ item }} to avoid YAML expansion

--- a/tasks/rbenv.yml
+++ b/tasks/rbenv.yml
@@ -7,7 +7,7 @@
   when: user == "chris"
 
 - name: Install ruby 2.1.2 using rbenv
-  command: {{ item }}
+  command: "{{ item }}"
   with_items:
     - rbenv install 2.1.2
     - rbenv rehash
