Do not reinstall AUR/gem packages if they are already installed

--- a/tasks/aur.yml
+++ b/tasks/aur.yml
@@ -4,9 +4,11 @@
 
 - name: Install cower
   command: aur cower
+  when: "'cower' not in installed_packages.stdout.split('\n')"
 
 - name: Make cower a dependency (of owlman)
   command: pacman -D --asdeps cower
 
 - name: Install owlman
   command: aur owlman
+  when: "'owlman' not in installed_packages.stdout.split('\n')"
