Reduce number of tasks erroneously shown as "changed"

--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -3,26 +3,32 @@
   sudo: yes
   sudo_user: "{{ user }}"
   git: repo=git://github.com/cdown/dotfiles.git dest="~{{ user }}/git/dotfiles" update=no
+  register: dotfiles_clone
   when: user == "chris"
 
 - name: Clone Lin's dotfiles for {{ user }}
   sudo: yes
   sudo_user: "{{ user }}"
   git: repo=git://github.com/cdown/dotfiles.git dest="~{{ user }}/git/dotfiles" update=no version=lin
+  register: dotfiles_clone
   when: user == "lin"
 
 - name: Clone Chris' dotfiles for root
   git: repo=git://github.com/cdown/dotfiles.git dest="~root/git/dotfiles" update=no
+  register: dotfiles_clone_root
   when: user == "chris"
 
 - name: Clone Lin's dotfiles for root
   git: repo=git://github.com/cdown/dotfiles.git dest="~root/git/dotfiles" update=no version=lin
+  register: dotfiles_clone_root
   when: user == "lin"
 
 - name: Set up dotfiles for {{ user }}
   sudo: yes
   sudo_user: "{{ user }}"
   command: ./setup chdir="~{{ user }}/git/dotfiles"
+  when: dotfiles_clone.changed
 
 - name: Set up dotfiles for root
   command: ./setup chdir="~root/git/dotfiles"
+  when: dotfiles_clone_root.changed
