--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -1,3 +1,3 @@
 ---
 - name: Create local user
-  user: name={{ user }} shell=/bin/bash password={{ user_password }}
+  user: name={{ user }} shell=/bin/zsh password={{ user_password }}
