--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -2,7 +2,7 @@
 - name: Clone Chris' dotfiles for {{ user }}
   sudo: yes
   sudo_user: "{{ user }}"
-  git: repo=git://github.com/cdown/dotfiles.git dest="~{{ user }}/git/dotfiles" update=no
+  git: repo=git://github.com/cdown/dotfiles.git dest="~{{ user }}/git/dotfiles" update=no version=linux
   when: user == "chris"
 
 - name: Clone Lin's dotfiles for {{ user }}
@@ -12,7 +12,7 @@
   when: user == "lin"
 
 - name: Clone Chris' dotfiles for root
-  git: repo=git://github.com/cdown/dotfiles.git dest="~root/git/dotfiles" update=no
+  git: repo=git://github.com/cdown/dotfiles.git dest="~root/git/dotfiles" update=no version=linux
   when: user == "chris"
 
 - name: Clone Lin's dotfiles for root
