Add packer support instead of using aur script

--- a/tasks/aur.yml
+++ b/tasks/aur.yml
@@ -2,13 +2,6 @@
 - name: Copy aur script
   copy: src=files/bin/aur dest=/usr/local/bin/aur mode=755
 
-- name: Install cower
-  command: aur cower
-  when: "'cower' not in installed_packages.stdout_lines"
-
-- name: Make cower a dependency (of owlman)
-  command: pacman -D --asdeps cower
-
-- name: Install owlman
-  command: aur owlman
-  when: "'owlman' not in installed_packages.stdout_lines"
+- name: Install packer
+  command: aur packer
+  when: "'packer' not in installed_packages.stdout_lines"
