--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -27,8 +27,8 @@
   when: user == "chris"
 
 - name: Install yturl if using Chris profile
-  command: aur yturl
-  when: "user == 'chris' and 'yturl' not in installed_packages.stdout_lines"
+  packer: name=yturl state=present
+  when: "user == 'chris'"
 
 - name: Install extra tools if using Lin profile
   pacman: name=libreoffice state=present
