--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -1,18 +1,12 @@
 ---
 - name: Install dwm
-  command: aur dwm-cdown-git
-  when: "'dwm-cdown-git' not in installed_packages.stdout_lines"
+  packer: name=dwm-cdown-git state=present
 
 - name: Install Hangouts video plugin
-  command: aur google-talkplugin
-  when: "'google-talkplugin' not in installed_packages.stdout_lines"
+  packer: name=google-talkplugin state=present
 
 - name: Install Google Chrome
-  command: aur {{ item }}
-  with_items:
-    - libgcrypt15
-    - google-chrome
-  when: "'google-chrome' not in installed_packages.stdout_lines"
+  packer: name=google-chrome state=present
 
 - name: Install desktop utilities
   pacman: name={{ item }} state=present
@@ -28,8 +22,7 @@
   when: user == "chris"
 
 - name: Install urxvt Perl extensions
-  command: aur urxvt-perls
-  when: "'urxvt-perls' not in installed_packages.stdout_lines"
+  packer: name=urxvt-perls state=present
 
 - name: Set up terminal fonts (Chris)
   pacman: name=terminus-font state=present
