Migrate to using yaourt

--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -2,24 +2,22 @@
 - name: Clone Chris' dotfiles for {{ user }}
   sudo: yes
   sudo_user: "{{ user }}"
-  git: repo=git://github.com/cdown/dotfiles.git dest="~{{ user }}/git/dotfiles" accept_hostkey=yes update=no
+  git: repo=git://github.com/cdown/dotfiles.git dest=~{{ user }}/git/dotfiles accept_hostkey=yes
   register: dotfiles_clone
   when: user == "chris"
 
 - name: Clone Lin's dotfiles for {{ user }}
   sudo: yes
   sudo_user: "{{ user }}"
-  git: repo=git://github.com/cdown/dotfiles.git dest="~{{ user }}/git/dotfiles" accept_hostkey=yes update=no version=lin
-  register: dotfiles_clone
+  git: repo=git://github.com/cdown/dotfiles.git dest=~{{ user }}/git/dotfiles accept_hostkey=yes version=lin
   when: user == "lin"
 
 - name: Clone Chris' dotfiles for root
-  git: repo=git://github.com/cdown/dotfiles.git dest="~root/git/dotfiles" accept_hostkey=yes update=no
-  register: dotfiles_clone_root
+  git: repo=git://github.com/cdown/dotfiles.git dest=~root/git/dotfiles accept_hostkey=yes
   when: user == "chris"
 
 - name: Clone Lin's dotfiles for root
-  git: repo=git://github.com/cdown/dotfiles.git dest="~root/git/dotfiles" accept_hostkey=yes update=no version=lin
+  git: repo=git://github.com/cdown/dotfiles.git dest=~root/git/dotfiles accept_hostkey=yes version=lin
   register: dotfiles_clone_root
   when: user == "lin"
 
@@ -27,8 +25,6 @@
   sudo: yes
   sudo_user: "{{ user }}"
   command: ./setup chdir="~{{ user }}/git/dotfiles"
-  when: dotfiles_clone.changed
 
 - name: Set up dotfiles for root
   command: ./setup chdir="~root/git/dotfiles"
-  when: dotfiles_clone_root.changed
