--- a/setup.yml
+++ b/setup.yml
@@ -45,6 +45,8 @@
     - include: tasks/media.yml
     - include: tasks/chinese.yml
     - include: tasks/dotfiles.yml
+      tags:
+        - dotfiles
     - include: tasks/rbenv.yml
     - include: tasks/shared.yml
 
