--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -1,18 +1,18 @@
 ---
 - name: Install dwm
-  command: aur dwm-cdown-git
-  when: "'dwm-cdown-git' not in installed_packages.stdout_lines"
+  command: yaourt --noconfirm -S dwm-cdown-git
+  sudo: yes
+  sudo_user: makepkg
 
 - name: Install Hangouts video plugin
-  command: aur google-talkplugin
-  when: "'google-talkplugin' not in installed_packages.stdout_lines"
+  command: yaourt --noconfirm -S google-talkplugin
+  sudo: yes
+  sudo_user: makepkg
 
 - name: Install Google Chrome
-  command: aur {{ item }}
-  with_items:
-    - libgcrypt15
-    - google-chrome
-  when: "'google-chrome' not in installed_packages.stdout_lines"
+  command: yaourt --noconfirm -S google-chrome
+  sudo: yes
+  sudo_user: makepkg
 
 - name: Install desktop utilities
   pacman: name={{ item }} state=present
@@ -28,8 +28,9 @@
   when: user == "chris"
 
 - name: Install urxvt Perl extensions
-  command: aur urxvt-perls
-  when: "'urxvt-perls' not in installed_packages.stdout_lines"
+  command: yaourt --noconfirm -S urxvt-perls
+  sudo: yes
+  sudo_user: makepkg
 
 - name: Set up terminal fonts (Chris)
   pacman: name=terminus-font state=present
