Try using yaourt

--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -27,7 +27,7 @@
   when: user == "chris"
 
 - name: Install yturl if using Chris profile
-  packer: name=yturl state=present
+  command: yaourt -S yturl
   when: "user == 'chris'"
 
 - name: Install extra tools if using Lin profile
