--- a/tasks/aur.yml
+++ b/tasks/aur.yml
@@ -2,14 +2,10 @@
 - name: Copy aur script
   copy: src=files/bin/aur dest=/usr/local/bin/aur mode=755
 
-# This sucks, but thankfully it doesn't need be done again after packer is
-# installed
-- name: Install packer dependencies
-  pacman: name={{ item }} state=present
-  with_items:
-    - jshon
-    - expac
+- name: Install yaourt dependencies
+  command: aur package-query
+  when: "'package-query' not in installed_packages.stdout_lines"
 
-- name: Install packer
-  command: aur packer
-  when: "'packer' not in installed_packages.stdout_lines"
+- name: Install yaourt
+  command: aur yaourt
+  when: "'yaourt' not in installed_packages.stdout_lines"
