--- a/tasks/aur.yml
+++ b/tasks/aur.yml
@@ -2,7 +2,10 @@
 - name: Copy aur script
   copy: src=files/bin/aur dest=/usr/local/bin/aur mode=755
 
-- name: Install yaourt dependencies
+- name: Install package-query dependency (yajl)
+  pacman: name=yajl state=present
+
+- name: Install yaourt dependency (package-query)
   command: aur package-query
   when: "'package-query' not in installed_packages.stdout_lines"
 
