--- a/tasks/rbenv.yml
+++ b/tasks/rbenv.yml
@@ -4,6 +4,8 @@
   with_items:
     - rbenv
     - ruby-build
+  sudo: yes
+  sudo_user: makepkg
   when: "user == 'chris' and 'rbenv' not in installed_packages.stdout_lines"
   register: rbenv_installed
 
