--- a/tasks/aur.yml
+++ b/tasks/aur.yml
@@ -1,4 +1,7 @@
 ---
+- name: Create local user for makepkg
+  user: name=makepkg shell=/bin/sh
+
 - name: Copy aur script
   copy: src=files/bin/aur dest=/usr/local/bin/aur mode=755
 
