--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -1,12 +1,18 @@
 ---
 - name: Install dwm
   command: yaourt --noconfirm -S dwm-cdown-git
+  sudo: yes
+  sudo_user: makepkg
 
 - name: Install Hangouts video plugin
   command: yaourt --noconfirm -S google-talkplugin
+  sudo: yes
+  sudo_user: makepkg
 
 - name: Install Google Chrome
   command: yaourt --noconfirm -S google-chrome
+  sudo: yes
+  sudo_user: makepkg
 
 - name: Install desktop utilities
   pacman: name={{ item }} state=present
@@ -23,6 +29,8 @@
 
 - name: Install urxvt Perl extensions
   command: yaourt --noconfirm -S urxvt-perls
+  sudo: yes
+  sudo_user: makepkg
 
 - name: Set up terminal fonts (Chris)
   pacman: name=terminus-font state=present
