Add "when" checks for yaourt installations

--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -30,7 +30,7 @@
   command: yaourt --noconfirm -S yturl
   sudo: yes
   sudo_user: makepkg
-  when: "user == 'chris'"
+  when: "user == 'chris' and 'yturl' not in installed_packages.stdout_lines"
 
 - name: Install extra tools if using Lin profile
   pacman: name=libreoffice state=present
