--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -3,16 +3,19 @@
   command: yaourt --noconfirm -S dwm-cdown-git
   sudo: yes
   sudo_user: makepkg
+  when: "'dwm-cdown-git' not in installed_packages.stdout_lines"
 
 - name: Install Hangouts video plugin
   command: yaourt --noconfirm -S google-talkplugin
   sudo: yes
   sudo_user: makepkg
+  when: "'google-talkplugin' not in installed_packages.stdout_lines"
 
 - name: Install Google Chrome
   command: yaourt --noconfirm -S google-chrome
   sudo: yes
   sudo_user: makepkg
+  when: "'google-chrome' not in installed_packages.stdout_lines"
 
 - name: Install desktop utilities
   pacman: name={{ item }} state=present
